Fix vertical placeholder spacing in Firefox

--- a/client/landing/gutenboarding/onboarding-block/acquire-intent/vertical-select/style.scss
+++ b/client/landing/gutenboarding/onboarding-block/acquire-intent/vertical-select/style.scss
@@ -46,7 +46,7 @@
 	flex: 1;
 
 	@include break-small {
-		display: inline;
+		display: inline-block;
 	}
 }
 
